# scrape_bot

./: .gitignore  README.md  api_server.py  config.py  gen_big_data.py  inspect_rules.py  main.py  modern_etl.py  pyproject.toml  scrape_bot.py
tests/: test_base_modules.py  test_ingestion.py
