[project]
name = "scrape-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "python-calamine>=0.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
